<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Durham Life</string>
    <string name="main_no_items">There are no new events</string>
    <string name="default_description">No description available</string>
    <string name="default_contact">No contact details available</string>
    <string name="default_event_name">Event</string>
    <string name="default_date">Date unspecified</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="subscribe">Subscribe</string>
    <string name="regsiter">Register</string>
    <string name="login">Login</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">E-Mail Address</string>
    <string name="university_affiliation">University Affiliation</string>
    <string name="college">College</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string-array name="college_array">
        <item>Select a college</item>
        <item>Collingwood</item>
        <item>Grey</item>
        <item>Hatfield</item>
        <item>Hild Bede</item>
        <item>John Snow</item>
        <item>Josephine Butler</item>
        <item>St. Aidan\'s</item>
        <item>St. Chad\'s</item>
        <item>St. Cuthbert\'s</item>
        <item>St. John\'s</item>
        <item>St. Mary\'s</item>
        <item>Stephenson</item>
        <item>Trevelyan</item>
        <item>University</item>
        <item>Ustinov</item>
        <item>Van Mildert</item>
    </string-array>
    <string-array name="durham_affiliation">
        <item>Visitor</item>
        <item>Student</item>
        <item>Alumni</item><item>Staff</item>
        
    </string-array>
    <string-array name="durham_departments">
        <item>Select a department</item>
        <item>Anthropology</item>
        <item>Archaeology</item>
        <item>Biological &amp; Biomedical</item>
        <item>Business School</item>
        <item>Chemistry</item>
        <item>Classics &amp; Ancient History</item>
        <item>Computer Science</item>
        <item>Earth Sciences</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>English Studies</item>
        <item>Geography</item>
        <item>Government and International Affairs</item>
        <item>History</item>
        <item>Law</item>
        <item>Mathematical Sciences</item>
        <item>Medicine</item>
        <item>Modern Languages &amp; Cultures</item>
        <item>Music</item>
        <item>Natural Sciences</item>
        <item>Philosophy</item>
        <item>Physics</item>
        <item>Psychology</item>
        <item>Theology and Ministry</item>
    </string-array>

    <string name="durham_affiliation">Durham Affiliation</string>
    <string name="event_image">Event Image</string>
    <string name="address_goes_here">Address Goes Here</string>
    <string name="submit">Submit</string>
    <string name="department">Department</string>
    <string name="problem_loading_comment">Problem Loading Comment</string>
    <string name="problem_loading_date">Problem Loading Date</string>
    <string name="rating">Rating</string>
    <string name="university">University</string>
    <string name="music">Music</string>
    <string name="theatre">Theatre</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="sport">Sport</string>
    <string name="conferences">Conferences</string>
    <string name="community">Community</string>
    <string name="change_preferences">Change Preferences</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="advertisement">Advertisement</string>
    <string name="browse">Browse</string>
    <string name="college_events">College Events</string>
    <string name="my_events">My Events</string>
    <string name="news">News</string>
    <string name="st_adians">St. Aidan\'s</string>
    <string name="societies">Societies</string>
    <string name="about">About</string>
    <string name="default_society_text">Society</string>
    <string name="settings">Settings</string>
    <string name="personal_societies">Personal Societies</string>
    <string name="duchess_logo">Duchess Logo</string>
    <string name="title_bar_button_1">Title Bar Button 1</string>
    <string name="title_bar_button_2">Title Bar Button 2</string>
    <string name="title_bar_button_3">Title Bar Button 3</string>
    <string name="title_bar_button_4">Title Bar Button 4</string>
    <string name="copyright">\u00A9 Durham University 2012</string>
    <string name="copyright_message">This is a generic copyright message because I am not a lawyer.</string>
    <string name="terms">Terms</string>
    <string name="version">Version</string>
    <string-array name="event_categories">
        <item >University</item>
        <item >College</item>
        <item >Music</item>
        <item >Theatre</item>
        <item >Exhibitions</item>
        <item >Sport</item>
        <item >Conferences</item>
        <item >Community</item>
    </string-array>
        <string name="society_description">Society Description</string>
        <string name="bookmarked_events">Bookmarked Events</string>
        <string name="you_have_not_bookmarked_any_events_yet_">You have not bookmarked any events yet.</string>
        <string name="tap_the_ribbon_on_an_event_to_save_it_to_this_list_">Tap the ribbon on an event to save it to this list.</string>
        <string name="bookmark_tutorial">Bookmark Tutorial</string>
        <string name="calendar">Calendar</string>
        <string name="bookmarked">Bookmarked</string>
        <string name="subscriptions">Subscriptions</string>
        <string name="bookmarks">Bookmarks</string>
        <string name="my_societies">My Societies</string>
        <string name="affiliation">Affiliation</string>
        <string name="you_have_not_subscribed_to_any_societies_yet_">You have not subscribed to any societies yet.</string>
        <string name="select_a_society_from_the_list_and_then_press_subscribe_">Select a society from the list and then press subscribe.</string>
        <string name="events">Events</string>

</resources>