<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/aboutBoxLogo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#7E317B"
            android:contentDescription="@string/duchess_logo"
            android:padding="5dp"
            android:src="@drawable/duchess" />

        <TextView
            android:id="@+id/aboutBoxVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:paddingTop="3dp"
            android:text="@string/version"
            android:textColor="@android:color/primary_text_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aboutBoxCopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:text="@string/copyright"
            android:textColor="@android:color/primary_text_light"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/aboutBoxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.1"
            android:paddingLeft="7dp"
            android:paddingTop="15dp"
            android:text="@string/copyright_message"
            android:textColor="@android:color/primary_text_light" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="#7E317B"
            android:paddingBottom="2dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/aboutBoxButtonTerms"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/terms" />

            <Button
                android:id="@+id/aboutBoxButtonOK"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>