<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="7dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        android:layout_alignParentTop="true">
		
		<EditText
	        android:id="@+id/forenameEdit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/forename"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/surnameEdit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/surname"
	        android:inputType="textPersonName" />
	
	    <TextView
	        android:id="@+id/collegeEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="2dp"
	        android:paddingLeft="2dp"
	        android:text="@string/college"
	        android:textColor="#FFFFFF"
	        android:textStyle="bold" />
	
	    <Spinner
	        android:id="@+id/collegeSpinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/college_array"
	        android:prompt="@string/college" />
	
	    <TextView
	        android:id="@+id/departmentEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="2dp"
	        android:paddingLeft="2dp"
	        android:text="@string/department"
	        android:textColor="#FFFFFF"
	        android:textStyle="bold" />
	
	    <Spinner
	        android:id="@+id/departmentSpinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/durham_departments"
	        android:prompt="@string/department" />
    </LinearLayout>

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/cancelUpdateProfileButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirmUpdateProfileButton"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/save" />
    </LinearLayout>

</RelativeLayout>